--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
 	<script src="assets/js/jquery-2.1.1.js"></script>
 	<script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
     <script src="assets/js/pace.min.js"></script>
     <script src="assets/js/jquery.plugin.min.js"></script>
     <script src="assets/js/jquery.countdown.min.js"></script>
